# GaokaoAgent

./: .editorconfig  .env.example  .gitattributes  .gitignore  00_REPORTS_INDEX.md  AGENTS.md  Dockerfile  Makefile  README.md  docker-compose.yml  setup-uv.ps1
backend/: .env.example  process_2025_enrollment.py  process_actual_2025_admissions.py  process_yifenyiduan.py  pyproject.toml  test_request.json
backend/data/: 2021_history.csv  2021_physics.csv  2021_历史_yifenyiduan.csv  2021_物理_yifenyiduan.csv  2022_history.csv  2022_physics.csv  2022_历史_yifenyiduan.csv  2022_物理_yifenyiduan.csv  2023_history.csv  2023_physics.csv  2023_历史_yifenyiduan.csv  2023_物理_yifenyiduan.csv  2024_history.csv  2024_physics.csv  2024_历史_yifenyiduan.csv  2024_物理_yifenyiduan.csv  2025_enrollment_历史.csv  2025_历史_yifenyiduan.csv  2025_物理_yifenyiduan.csv  probability_calibration_2025.json  sft_training_data.jsonl  test_set_50.jsonl
backend/docs/: hf_jobs_submission_example.md  orchestration_alignment_training.md
backend/scripts/: audit_enrollment_diff_2025.py  audit_market_evidence_2025.py  build_pairwise_orchestration_dataset.py  evaluate_orchestration_policies.py  export_orchestration_alignment_data.py  gaokao_agent.py  gen_sft_data.py  gen_test_set.py  generate_frozen_plans_2025.py  generate_orchestration_cases.py  index_all_pdfs.py  rollout_supervisor_traces.py  run_experiment_suite.py  train_minimal_supervisor_reward_model.py  train_orchestration_grpo.py  train_orchestration_grpo_hf_job.py  train_orchestration_reward_model.py  train_supervisor_action_ranker.py
backend/src/: __init__.py  evidence_autopilot_api.py  gaokao_agent_cli.py  main.py  official_source_provider.py  reviewed_evidence_attachment_store.py  reviewed_evidence_store.py  test_ablation_2025_smoke.py  (+75 more)
(+413 files in other folders)
